<resources>
  <string name="create_new_account">Create New Account</string>
  <string name="access_existing_account">Access Existing Account</string>
  <string name="bitmark_registry">Bitmark Registry</string>
  <string name="protect_the_legal_rights">Protect the legal rights to your
        data and other digital assets.
    </string>
  <string name="error">Error</string>
  <string name="passcode_pin_required">Device PIN setup is required</string>
  <string name="fingerprint_required">Biometric authentication setup is required</string>
  <string name="skip">Skip</string>
  <string name="warning">Warning</string>
  <string name="unexpected_error">Unexpected error has occurred. We are sorry for the inconvenience</string>
  <string name="properties">Properties</string>
  <string name="transaction">Transactions</string>
  <string name="account">Account</string>
  <string name="recovery_phrase_sign_in">Recovery Phrase Sign-in</string>
  <string name="please_type_all_12_word">Please type all 12 words of your recovery phrase in the exact sequence below:</string>
  <string name="please_type_all_24_word">Please type all 24 words of your recovery phrase in the exact sequence below:</string>
  <string name="are_you_using_24_word">Are you using 24 words of recovery phrase?\nTap here to switch the form.</string>
  <string name="are_you_using_12_word">Are you using 12 words of recovery phrase?\nTap here to switch the form.</string>
  <string name="submit">Submit</string>
  <string name="wrong_recovery_phrase">Wrong Recovery Phrase!</string>
  <string name="please_try_again">Please try again!</string>
  <string name="create_your_first_property">Create first property</string>
  <string name="welcome_to_bitmark">Welcome to Bitmark!</string>
  <string name="yours">Yours</string>
  <string name="global">Global</string>
  <string name="you">You</string>
  <string name="incoming">Incoming</string>
  <string name="registering">Registering</string>
  <string name="your_properties">Your Properties</string>
  <string name="provenance">Provenance</string>
  <string name="share">Share</string>
  <string name="copy_bitmark_id">Copy Id</string>
  <string name="transfer">Transfer</string>
  <string name="download">Download</string>
  <string name="delete">Delete</string>
  <string name="pending">Pending</string>
  <string name="timestamp">Timestamp</string>
  <string name="owner">Owner</string>
  <string name="copied_to_clipboard">Copied to clipboard!</string>
  <string name="issued_on">Issued on</string>
  <string name="this_bitmark_will_be_deleted">This Bitmark Certificate will be deleted.</string>
  <string name="cancel">Cancel</string>
  <string name="preparing_to_export">Preparing to export…</string>
  <string name="downloading">Downloading</string>
  <string name="the_asset_is_not_available">The asset is not available to download.</string>
  <string name="could_not_download_asset">Could not download asset. Please try again later.</string>
  <string name="transfer_bitmark">Transfer Bitmark Certificate</string>
  <string name="recipient_bitmark_account_number">RECIPIENT BITMARK ACCOUNT NUMBER</string>
  <string name="enter_the_bitmark_account_number">Enter the Bitmark account number to which you would like to transfer ownership of this property.</string>
  <string name="could_not_transfer">Could not transfer bitmark. Please try again later.</string>
  <string name="invalid_bitmark_account_number">Invalid bitmark account number!</string>
  <string name="scan_qr_code">Scan QR Code</string>
  <string name="please_authorize">Please authorize</string>
  <string name="actions_required">Actions Required</string>
  <string name="history">History</string>
  <string name="issuance">Issuance</string>
  <string name="property_issuance">Property Issuance</string>
  <string name="p2p_transfer">P2P Transfer</string>
  <string name="from">From</string>
  <string name="to">To</string>
  <string name="type">Type</string>
  <string name="property">Property</string>
  <string name="registry">Registry</string>
  <string name="no_action_required">No Action Required</string>
  <string name="this_is_where_you_will_receive">This is where you will receive authorization requests.</string>
  <string name="no_transaction_history">No Transaction History</string>
  <string name="your_transaction_history_will_be_available">Your transaction history will be available here.</string>
  <string name="security_alert">Security Alert</string>
  <string name="write_down_your_recovery_phrase">Write Down Recovery Phrase</string>
  <string name="write_down_recovery_phrase">Write Down Recovery Phrase</string>
  <string name="protect_your_bitmark_account">Protect your Bitmark account.</string>
  <string name="bitmark_is_the_property_system_for_establishing">Bitmark is the property system for establishing value and legal control over the world’s data. Our mission is to define digital property, defend it, and make it economically divisible. \n\nRegister, track, and trade property rights for your digital assets.</string>
  <string name="your_property_rights_has_been_transferred">Your rights to this property have been transferred.</string>
  <string name="your_property_rights_has_been_deleted">Your rights to this property have been permanently removed from your account.</string>
  <string name="settings">Settings</string>
  <string name="authorized">Authorized</string>
  <string name="your_bitmark_account_number">Your Bitmark Account Number</string>
  <string name="to_protect_your_privacy">To protect your privacy, you are identified in the Bitmark system by a pseudonymous account number. This number is public. You can safely share it with others without compromising your security.</string>
  <string name="log_out_arrow">Log out »</string>
  <string name="detail_arrow">Detail »</string>
  <string name="write_down_your_recovery_phrase_arrow">Write Down Recovery Phrase »</string>
  <string name="back_up_to_google_drive_arrow">Back up to Google Drive »</string>
  <string name="need_help_question">Need Help?</string>
  <string name="receive_property">Receive Property</string>
  <string name="your_recovery_phrase_is_the_only">Your recovery phrase is the only way to restore your Bitmark account if your phone is lost, stolen, broken, or upgraded. \n\nWe will show you a list of words to write down on a piece of paper and keep safe. \n\nMake sure you are in a private location before writing down your recovery phrase.</string>
  <string name="warning_exclamation">Warning!</string>
  <string name="please_write_down_your_recovery_phrase">Please write down your recovery phrase in the exact sequence below:</string>
  <string name="test_recovery_phrase">Test Recovery Phrase</string>
  <string name="done">Done</string>
  <string name="recovery_phrase">Recovery Phrase</string>
  <string name="tap_the_word_to_put_them">Tap the words to put them in the correct order for your recovery phrase:</string>
  <string name="retry">Retry</string>
  <string name="error_exclamation">Error!</string>
  <string name="success_exclamation">Success!</string>
  <string name="keep_your_written_copy_private">Keep your written copy private in a secure and safe location.</string>
  <string name="remove_access">Remove Access</string>
  <string name="your_recovery_phrase_is_the_only_way_to_access">Your recovery phrase is the only way to access your Bitmark account after signing out. If you have not already written down your recovery phrase, you must do so now or you will be permanently lose access to your account and lose ownership of all your digital properties. \n\nYour recovery phrase is a list of words to write on a piece of paper and keep safe. Make sure you are in a private location when you write it down.</string>
  <string name="could_not_remove_access_due_to_unexpected_problem">Could not remove access due to unexpected problem. Please try again later.</string>
  <string name="removing_access_three_dot">Removing access…</string>
  <string name="removing_access_for_account">Removing access for account</string>
  <string name="you_can_transfer_rights_to_another">You can transfer rights to another Bitmark account by scanning the receiving account\&apos;s QR code. You can view your account QR code by tapping @  at the top of the Account screen. </string>
  <string name="terms_of_service">Terms of Service</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="what_s_new">What\&apos;s New!</string>
  <string name="play_store_rating_and_review">Play Store Rating &amp; Review</string>
  <string name="share_this_app">Share This App</string>
  <string name="details">Details</string>
  <string name="version">Version</string>
  <string name="share_with">Share with</string>
  <string name="release_notes">Release Notes</string>
  <string-array name="release_note_info">
    <item name="content">Highlights of the new features\n&#x2014; You can now back up your assets on your Google Drive\n\nEnhancements\n&#x2014; Bug fixes and performance improvements\n&#x2014; Redesigned splash screen\n&#x2014; Improved usability for the registering Property Rights\n\nWe value your feedback, if you have ideas or suggestions on how to make our app even better, please email us at support@bitmark.com.</item>
    <item name="date">2019-09-24T00:00:00.000000Z</item>
  </string-array>
  <string name="close">Close</string>
  <string name="clean_up_data">Cleanup data…</string>
  <string name="register">Register</string>
  <string name="photo">Photo</string>
  <string name="video">Video</string>
  <string name="file">File</string>
  <string name="to_register_your_media_and_asset">To register your media and assets, first create an asset record.\nYou can then issue that asset and transfer it. All of this is recorded on the blockchain.</string>
  <string name="extracting_file">Extracting file…</string>
  <string name="extracting">Extracting</string>
  <string name="unsupported_file">Unsupported file</string>
  <string name="register_property_rights">Register property rights</string>
  <string name="asset_fingerprint">Asset fingerprint</string>
  <string name="generated_from">Generated from</string>
  <string name="property_name">Property name</string>
  <string-array name="asset_type">
    <item>Photo</item>
    <item>Video</item>
    <item>File</item>
  </string-array>
  <string name="property_description">Property description</string>
  <string name="what_is_property_description_arrow">What is property description? »</string>
  <string name="sixty_four_character_max">64-CHARACTER MAX</string>
  <string name="select_asset_type">Select asset type</string>
  <string name="key">KEY</string>
  <string name="value">VALUE</string>
  <string name="edit">Edit</string>
  <string name="add_new_field">Add new field</string>
  <string name="number_of_bitmarks_to_issue">Number of bitmark Certificates</string>
  <string name="rights_claim">Rights claim</string>
  <string name="quote_i_hereby_claim_that_i_am_the_legal">\&quot;I hereby claim that I am the legal owner of this asset and want these property rights to be irrevocably issued and recorded on the Bitmark blockchain. \&quot;</string>
  <string name="could_not_register_property">Could not register property rights. Please try again later.</string>
  <string name="your_rights_to_this_property">Your rights to this property have been registered.</string>
  <string name="other">Other</string>
  <string name="loading_three_dot">Loading…</string>
  <string name="authorize">Authorize</string>
  <string name="backup_to_google_drive">Back up to Google Drive</string>
  <string name="to_protect_your_assets">To protect your assets from loss and allow asset syncing across devices, please authorize the Bitmark app to back up your assets in your Google Drive account. </string>
  <string name="by_continuing_you_agree_format">By continuing, you agree to the Bitmark %1$s and %2$s.</string>
</resources>