<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

  <LinearLayout
      android:id="@+id/layoutToolbar"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dp_44"
      android:background="@color/wild_sand"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:paddingEnd="@dimen/dp_20"
      android:paddingStart="@dimen/dp_20"
      >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/dp_16"
        android:layout_height="@dimen/dp_16"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/ic_back"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/avenir_bold"
        android:gravity="center"
        android:text="@string/recovery_phrase"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_18"
        />
  </LinearLayout>

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@id/btnTestRecoveryPhrase"
      android:layout_below="@id/layoutToolbar"
      android:fillViewport="true"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        >

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvInstruction"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/dp_20"
          android:layout_marginStart="@dimen/dp_20"
          android:layout_marginTop="@dimen/dp_36"
          android:fontFamily="@font/avenir_light"
          android:text="@string/please_write_down_your_recovery_phrase"
          android:textColor="@android:color/black"
          android:textSize="@dimen/sp_17"
          />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rvRecoveryPhrase"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_24"
          android:paddingBottom="@dimen/dp_12"
          />

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnTestRecoveryPhrase"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dp_44"
      android:layout_above="@id/btnDone"
      android:background="@drawable/bg_blue_ribbon_stateful"
      android:fontFamily="@font/avenir_bold"
      android:text="@string/test_recovery_phrase"
      android:textColor="@android:color/white"
      android:textSize="@dimen/sp_16"
      tools:visibility="visible"
      style="?android:attr/borderlessButtonStyle"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnDone"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dp_44"
      android:layout_alignParentBottom="true"
      android:background="@drawable/bg_alice_blue_stateful"
      android:fontFamily="@font/avenir_bold"
      android:text="@string/done"
      android:textColor="@color/blue_ribbon"
      android:textSize="@dimen/sp_16"
      tools:visibility="visible"
      style="?android:attr/borderlessButtonStyle"
      />

</RelativeLayout>