<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutSwipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_24"
        android:fontFamily="@font/avenir_bold"
        android:text="@string/welcome_to_bitmark"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_17"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvIntroduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWelcome"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_28"
        android:fontFamily="@font/avenir_light"
        android:lineSpacingExtra="@dimen/dp_2"
        android:text="@string/bitmark_is_the_property_system_for_establishing"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="@dimen/sp_17"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateProperty"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_blue_ribbon_stateful"
        android:fontFamily="@font/avenir_bold"
        android:text="@string/create_your_first_property"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16"
        android:visibility="gone"
        tools:visibility="gone"
        style="?android:attr/borderlessButtonStyle"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProperties"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/dp_28"
        android:layout_height="@dimen/dp_28"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        tools:visibility="visible"
        />

  </RelativeLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>